--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.26.11/antd.min.css"
+    integrity="sha256-fJLBPUoJHQdBK/bgQSnZLJKIt+t/6cNyjZ/dUed8W6E=" crossorigin="anonymous" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +31,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" style="background-color: #e8e8e8"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -38,6 +42,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/antd/3.26.11/antd-with-locales.js"
+    integrity="sha256-clPQdmntBNr+e11ISwDbsjJQaQ+R8ot6+B2G+OMat+g=" crossorigin="anonymous"></script>
 </body>
 
 </html>
