--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.26.11/antd.min.css"
     integrity="sha256-fJLBPUoJHQdBK/bgQSnZLJKIt+t/6cNyjZ/dUed8W6E=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -31,6 +32,7 @@
     * {
       margin: 0;
       padding: 0;
+      scroll-behavior: smooth;
       /* overflow-x: hidden; */
     }
   </style>
