--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.26.11/antd.min.css"
     integrity="sha256-fJLBPUoJHQdBK/bgQSnZLJKIt+t/6cNyjZ/dUed8W6E=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri&display=swap" rel="stylesheet"> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
